Examiners comments , along with the username reset

--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -488,9 +488,9 @@ body img{
 					<div class="breadcrumb-text">
 						<h1>Favourite Games</h1>
 						<p>
-						<span class="blue">All</span>
-							<span class="black"> the fun</span>
-							<span class="pink">is here</span>
+						<span class="blue">Where</span>
+							<span class="black"> Happiness</span>
+							<span class="pink">is met</span>
 						</p>
 					</div>
 				</div>
