--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -204,8 +204,8 @@ body img{
 						<h1>About Us</h1>
 						<p>
 							<span class="blue">where</span>
-							<span class="black"> Gamers</span>
-							<span class="pink">Grow Up</span>
+							<span class="black"> Happiness</span>
+							<span class="pink">is met</span>
 						</p>
 					</div>
 				</div>
