--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -238,10 +238,12 @@
 							<p class="Lang"></p>
 							<p class="rDate"></p>
 							<p class="Developer"></p>
+							<p class="size"></p>
 							<p class="rateC"></p>
 							<p class="age"></p>
 							<p class="price"></p>
 							<p class="purch"></p>
+
 
 							<a href="#" class="cart-btn" id="favBtn"><i class="fas fa-regular fa-heart"></i> <span id="favText">Add to Favourite Games</span></a>
 							<a href="javascript:void(0);" class="cart-btn download" id="copyBtn"><i class="fas fa-solid fa-link"></i><span id="copyText">Go to The Download Page!</span></a>
@@ -525,7 +527,7 @@ document.addEventListener('DOMContentLoaded', function () {
         document.querySelector('.age').innerHTML = '<strong>Age Rating:</strong> ' + gameData.Age_Rating+'.';
         document.querySelector('.price').innerHTML = '<strong>Price:</strong> ' + gameData.Price+'.';
         document.querySelector('.purch').innerHTML = '<strong>In app Purchases:</strong> ' + gameData.In_app_Purchases+'.';
-
+        document.querySelector('.size').innerHTML = '<strong>Size:</strong> ' + gameData.Size+'MB.';
 
 		document.getElementById('copyBtn').addEventListener('click', function() {
 			saveVisitedGame();
