--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -71,17 +71,17 @@
 		  var messageSpan = document.getElementById("passMessage");
 		  var divCP = document.getElementById("cp");
 		  var messageEmail = document.getElementById("emailMessage");
-		  
+		  var valid =document.getElementById('cp');
 		  if (!passRegex.test(pass)) {
-			messageSpan.innerHTML = 'Password must be at least 8 characters, contain at least one number, one lowercase letter, and one uppercase letter.';
+			messageSpan.innerHTML = 'Password must be at least 8 characters, at least 1 lowercase , and 1 uppercase ,and contain at least one number.';
 			messageSpan.style.visibility = 'visible';
-			divCP.style.paddingTop = '8%';
-			messageEmail.style.top = '35%';
+			valid.style.paddingTop = '3%';
+
 
 				return false;
 			} else {
 				divCP.style.paddingTop = '0';
-				messageEmail.style.top = '36%';
+
 				messageSpan.style.visibility = 'hidden';
 			}
 	
@@ -147,7 +147,7 @@ background: linear-gradient(96deg, rgba(21,22,51,1) 0%, rgba(226,42,162,1) 86%);
 }
 
 .hero-area {
-    min-height: 105vh;
+    min-height: 130vh;
 }
 
 
@@ -324,8 +324,25 @@ body img{
 			<i class="fa fa-user-circle"></i>
 		</span>
         <label for="username">Username:</label>
-        <input type="text" id="username" class="input-box" name="Username" required placeholder="Enter your username" style="width: 58%;">
+        <input type="text" id="username" class="input-box" name="Username" required placeholder="Enter your username" onblur="validateUsername(this.value)" pattern="[A-Za-z][A-Za-z0-9]*" title="Username should not start with a number and no spaces allowed" style="width: 58%;">
     </div>
+	<span id="username-error" class="error-message" style="color: darkred; font-size: 90%; font-weight: 600;  display: flex; position: absolute; top: 19.5%;"></span>
+	<div class="input-pair">
+		<span class="input-item">
+			<i class="fa fa-user-circle"></i>
+		</span>
+        <label for="username">Firstname:</label>
+        <input type="text" id="firstname" class="input-box" name="firstname" required placeholder="Enter your First name" onblur="validateFname(this.value)" pattern="[A-Za-z][A-Za-z0-9]*" title="Username should not start with a number and no spaces allowed" style="width: 58%;">
+    </div>
+	<span id="firstname-error" class="error-message" style="color: darkred; font-size: 90%; font-weight: 600;  display: flex; position: absolute; top: 29.5%;"></span>
+	<div class="input-pair">
+		<span class="input-item">
+			<i class="fa fa-user-circle"></i>
+		</span>
+        <label for="username">Lastname:</label>
+        <input type="text" id="lastname" class="input-box" name="lastname" required placeholder="Enter your Last name" onblur="validateLname(this.value)" pattern="[A-Za-z][A-Za-z0-9]*" title="Username should not start with a number and no spaces allowed" style="width: 58%;">
+    </div>
+	<span id="lastname-error" class="error-message" style="color: darkred; font-size: 90%; font-weight: 600;  display: flex; position: absolute; top: 39.5%;"></span>
     <div class="input-pair">
 		<span class="input-item">
 			<i class="fa fa-envelope"></i>
@@ -333,7 +350,7 @@ body img{
 		<label for="email">Email:</label>
 		<input type="email" id="email" class="input-box" name="Email" required placeholder="Enter your email" onblur="validateEmail(this.value)" style="margin-left: 10%">
     </div>
-	<span id="emailMessage" style="color: darkred; font-size: 90%; font-weight: 600; visibility:hidden; display: flex; position: absolute; top: 37%;"></span>
+	<span id="emailMessage" style="color: darkred; font-size: 90%; font-weight: 600; visibility:hidden; display: flex; position: absolute; top:50%;"></span>
     <div class="input-pair" style="padding-top: 3%;">
 		<span class="input-item">
 			<i class="fa fa-key"></i>
@@ -343,7 +360,7 @@ body img{
         title="Password must be at least 8 characters, contain at least one number, one lowercase letter, and one uppercase letter.">
 		<i class="fa fa-eye-slash togglePassword" style="font-size: 20px; position: absolute; right: 150px; cursor: pointer;"></i>
 	 </div>
-	 <span id="passMessage" style="color: darkred; font-size: 90%; font-weight: 600; visibility:hidden; display: flex; position: absolute; top: 49%; left: 34%; max-width: 55%;"></span>
+	 <span id="passMessage" style="color: darkred; font-size: 90%; font-weight: 600; visibility:hidden; display: flex; position: absolute; top: 60.5%; left: 35%; max-width: 55%;"></span>
     <div class="input-pair" id="cp">
 		<span class="input-item" style="top: -18px;">
 			<i class="fa fa-key"></i>
@@ -367,7 +384,42 @@ body img{
     <br><br>
     <label>Already have an account? <a href="{% url 'login' %}" class="alt-link">Log in</a></label>
 </form>
+<script>
+    function validateUsername(username) {
+        var usernameError = document.getElementById('username-error');
+        var usernamePattern = /^[A-Za-z][A-Za-z0-9]*$/;
 
+        if (!usernamePattern.test(username)) {
+            usernameError.textContent = 'Username should start with a letter and not contain spaces.';
+        } else {
+            usernameError.textContent = '';
+        }
+    }
+</script>
+		<script>
+    function validateFname(Fname) {
+        var usernameError = document.getElementById('firstname-error');
+        var usernamePattern = /^[A-Za-z][A-Za-z0-9]*$/;
+
+        if (!usernamePattern.test(username)) {
+            usernameError.textContent = 'Firstname should start with a letter and not contain spaces.';
+        } else {
+            usernameError.textContent = '';
+        }
+    }
+</script>
+				<script>
+    function validateLname(Lname) {
+        var usernameError = document.getElementById('lastname-error');
+        var usernamePattern = /^[A-Za-z][A-Za-z0-9]*$/;
+
+        if (!usernamePattern.test(username)) {
+            usernameError.textContent = 'Lastname should start with a letter and not contain spaces.';
+        } else {
+            usernameError.textContent = '';
+        }
+    }
+</script>
 <script>
     document.querySelectorAll('.togglePassword').forEach(function(icon) {
         icon.addEventListener('click', function() {
