--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
 
 	<!-- title -->
-	<title>Downloaded Games</title>
+	<title>Visited Store Games</title>
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 	<!-- favicon -->
@@ -158,7 +158,7 @@ body img{
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Visited Store Games</a></li>
 											
 										</ul>
 									</li>
@@ -250,7 +250,7 @@ body img{
 			<div class="row">
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="breadcrumb-text">
-						<h1>Downloaded Games</h1>
+						<h1>Visited Store Games</h1>
 						<p>
 						<span class="blue">All</span>
 							<span class="black"> the fun</span>
