--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -280,6 +280,10 @@ margin-left:20%;
 
 }
 
+		    .view-more, .view-less {
+        color: #ff069a;
+        cursor: pointer;
+    }
 
     </style>
 
@@ -401,8 +405,7 @@ margin-left:20%;
         <option>Oldest Games</option>
         <option>Highest Age Rating</option>
         <option>Lowest Age Rating</option>
-        <option>Highest Rating Count</option>
-        <option>Lowest Rating Count</option>
+
         <option>Highest Rating</option>
         <option>Lowest Rating</option>
         <option>Largest Size</option>
@@ -443,13 +446,17 @@ margin-left:20%;
 							</div>
 						</div>
 					</details>
-					
-					<script>
+	<script>
     $(document).ready(function () {
+
         function updateGamesByMultipleCategories(categories) {
             var requestData = {};
             categories.forEach(function (category) {
-                requestData[`${category}[]`] = getSelectedCheckboxValues(`#${category}-options-container input[type="checkbox"]`);
+                if (category === 'Rating') {
+                    requestData[`${category}[]`] = getSelectedRatingValues(`#${category}-options-container input[type="checkbox"]`);
+                } else {
+                    requestData[`${category}[]`] = getSelectedCheckboxValues(`#${category}-options-container input[type="checkbox"]`);
+                }
             });
 
             $.ajax({
@@ -458,11 +465,9 @@ margin-left:20%;
                 data: requestData,
                 dataType: 'json',
                 success: function (response) {
-					makeAjaxRequest(1, 1);
+                    makeAjaxRequest(1, 1);
                     updateGamesContainer(response);
-					console.log(response);
-
-
+                    console.log(response);
                 },
                 error: function (error) {
                     console.error('Error fetching games:', error);
@@ -476,88 +481,129 @@ margin-left:20%;
             }).get();
         }
 
+        function getSelectedRatingValues(selector) {
+            return $(selector + ':checked').map(function () {
+                return parseFloat($(this).val());
+            }).get();
+        }
+
         function attachEventListeners() {
             const categoryCheckboxes = document.querySelectorAll('input[type="checkbox"]');
             categoryCheckboxes.forEach(checkbox => {
                 checkbox.addEventListener('change', function () {
-					clearTimeout(this.timeoutId);
-					this.timeoutId = setTimeout(() => {
-						var category = $(this).data('category');
-                        updateGamesByMultipleCategories(['Price', 'Genres', 'In_app_Purchases', 'Average_User_Rating', 'Languages']);}, 300);
-				});
+                    clearTimeout(this.timeoutId);
+                    this.timeoutId = setTimeout(() => {
+                        var category = $(this).data('category');
+                        updateGamesByMultipleCategories(['Price', 'Genres', 'In_app_Purchases', 'Average_User_Rating', 'Languages', 'Rating']);
+                    }, 300);
+                });
             });
         }
 
-		function EventListeners(){
-						const genreCheckboxes = document.querySelectorAll('input[type="checkbox"]');
-						const resultsForText = document.getElementById('resultsForText');
-						const clearFiltersButton = document.getElementById('clearFilters');
-					
-						genreCheckboxes.forEach(checkbox => {
-							checkbox.addEventListener('change', updateSelectedFilters);
-						});
-					
-						clearFiltersButton.addEventListener('click', clearAllFilters);
-					
-						resultsForText.addEventListener('click', (event) => {
-							if (event.target.classList.contains('remove-button')) {
-								const value = event.target.getAttribute('data-value');
-								removeFilter(value);
-							}
-						});
-					
-						function updateSelectedFilters() {
-							const selectedFilterValues = Array.from(genreCheckboxes)
-								.filter(checkbox => checkbox.checked)
-								.map(checkbox => checkbox.value);
-					
-							resultsForText.innerHTML = '';
-					
-							if (selectedFilterValues.length > 0) {
-								resultsForText.style.display = 'inline';
-								resultsForText.innerHTML = "<span class='result-text'>Results For: </span>";
-					
-								selectedFilterValues.forEach(value => {
-									const container = document.createElement('span');
-									container.className = 'checkbox-container';
-					
-									const checkboxValue = document.createElement('span');
-									checkboxValue.className = 'checkbox-value';
-									checkboxValue.textContent = value;
-					
-									const removeButton = document.createElement('span');
-									removeButton.className = 'remove-button';
-									removeButton.textContent = 'X';
-									removeButton.setAttribute('data-value', value);
-					
-									container.appendChild(checkboxValue);
-									container.appendChild(removeButton);
-					
-									resultsForText.appendChild(container);
+        function EventListeners() {
+            const genreCheckboxes = document.querySelectorAll('input[type="checkbox"]');
+            const resultsForText = document.getElementById('resultsForText');
+            const clearFiltersButton = document.getElementById('clearFilters');
 
-								});
-							} else {
-								resultsForText.style.display = 'none';
-								resultsForText.textContent = '';
-							}
+            genreCheckboxes.forEach(checkbox => {
+                checkbox.addEventListener('change', updateSelectedFilters);
+            });
 
-						}
-					
-						function removeFilter(value) {
-							const checkbox = document.querySelector(`input[type="checkbox"][value="${value}"]`);
-							if (checkbox) {
-								checkbox.checked = false;
-								const event = new Event('change', { bubbles: true });
-								checkbox.dispatchEvent(event);
-							}
-							updateSelectedFilters();
+            clearFiltersButton.addEventListener('click', clearAllFilters);
 
-						}
-					
-						function clearAllFilters() {
-							window.location.reload();
+            resultsForText.addEventListener('click', (event) => {
+                if (event.target.classList.contains('remove-button')) {
+                    const value = event.target.getAttribute('data-value');
+                    removeFilter(value);
+                }
+            });
 
-						}}
+            function updateSelectedFilters() {
+                const selectedFilterValues = Array.from(genreCheckboxes)
+                    .filter(checkbox => checkbox.checked)
+                    .map(checkbox => checkbox.value);
+
+                resultsForText.innerHTML = '';
+
+                if (selectedFilterValues.length > 0) {
+                    resultsForText.style.display = 'inline';
+                    resultsForText.innerHTML = "<span class='result-text'>Results For: </span>";
+
+                    selectedFilterValues.forEach(value => {
+                        const container = document.createElement('span');
+                        container.className = 'checkbox-container';
+
+                        const checkboxValue = document.createElement('span');
+                        checkboxValue.className = 'checkbox-value';
+                        checkboxValue.textContent = value;
+
+                        const removeButton = document.createElement('span');
+                        removeButton.className = 'remove-button';
+                        removeButton.textContent = 'X';
+                        removeButton.setAttribute('data-value', value);
+
+                        container.appendChild(checkboxValue);
+                        container.appendChild(removeButton);
+
+                        resultsForText.appendChild(container);
+
+                    });
+                } else {
+                    resultsForText.style.display = 'none';
+                    resultsForText.textContent = '';
+                }
+
+            }
+
+            function removeFilter(value) {
+                const checkbox = document.querySelector(`input[type="checkbox"][value="${value}"]`);
+                if (checkbox) {
+                    checkbox.checked = false;
+                    const event = new Event('change', { bubbles: true });
+                    checkbox.dispatchEvent(event);
+                }
+                updateSelectedFilters();
+
+            }
+
+            function clearAllFilters() {
+                window.location.reload();
+            }
+        }
+
+        // Function to append checkboxes to a container with "View more" option
+        function appendCheckboxesWithViewMore(container, checkboxes) {
+            checkboxes.forEach(function (option, index) {
+                container.append(`
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="${option}" data-category="${container.attr('id')}">
+                        <label class="form-check-label">${option}</label>
+                    </div>
+                `);
+
+                // Display only the first 10 checkboxes initially
+                if (index === 9) {
+                    container.append('<div class="view-more">View more</div>');
+                }
+            });
+
+            // Hide checkboxes after the first 10
+            container.find('.form-check').slice(10).hide();
+        }
+
+        // Function to append rating checkboxes to a container with star icons
+        function appendRatingCheckboxes(container) {
+            const stars = '<span style="color: yellow;">&#9733;</span>'; // &#9733; is the HTML code for a star character
+
+            for (let rating = 1; rating <= 5; rating++) {
+                container.append(`
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="${rating}" data-category="${container.attr('id')}">
+                        <label class="form-check-label">${stars.repeat(rating)}</label>
+                    </div>
+                `);
+            }
+        }
 
         // Extract Genre
         $.ajax({
@@ -565,16 +611,9 @@ margin-left:20%;
             type: 'GET',
             dataType: 'json',
             success: function (data) {
-                data.genres.forEach(function (genre) {
-                    $('#Genres-options-container').append(`
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="${genre}" data-category="Genres">
-                            <label class="form-check-label">${genre}</label>
-                        </div>
-                    `);
-                });
+                appendCheckboxesWithViewMore($('#Genres-options-container'), data.genres);
                 attachEventListeners();
-				EventListeners();
+                EventListeners();
             },
             error: function () {
                 console.error('Failed to fetch genre options.');
@@ -587,16 +626,9 @@ margin-left:20%;
             type: 'GET',
             dataType: 'json',
             success: function (data) {
-                data.prices.forEach(function (price) {
-                    $('#Price-options-container').append(`
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="${price}" data-category="Price">
-                            <label class="form-check-label">${price}</label>
-                        </div>
-                    `);
-                });
+                appendCheckboxesWithViewMore($('#Price-options-container'), data.prices);
                 attachEventListeners();
-				EventListeners();
+                EventListeners();
             },
             error: function () {
                 console.error('Failed to fetch price options.');
@@ -609,67 +641,73 @@ margin-left:20%;
             type: 'GET',
             dataType: 'json',
             success: function (data) {
-                data.languages.forEach(function (language) {
-                    $('#Languages-options-container').append(`
-                        <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="${language}" data-category="Languages">
-                            <label class="form-check-label">${language}</label>
-                        </div>
-                    `);
-                });
+                appendCheckboxesWithViewMore($('#Languages-options-container'), data.languages);
                 attachEventListeners();
-				EventListeners();
+                EventListeners();
             },
             error: function () {
                 console.error('Failed to fetch language options.');
             }
         });
 
-		$.ajax({
-			url: '/BackEnd/ExtractInAppPurchases/',
-			type: 'GET',
-			dataType: 'json',
-			success: function (data) {
-				data.InAppPurchases.forEach(function (InAppPurchase) {
-					$('#In_app_Purchases-options-container').append(`
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" value="${InAppPurchase}" data-category="In_app_Purchases">
-							<label class="form-check-label">${InAppPurchase}</label>
-						</div>
-					`);
-				});
-				attachEventListeners();
-				EventListeners();
-			},
-			error: function () {
-				console.error('Failed to fetch InAppPurchase options.');
-			}
-		});
+        // Extract In-App Purchases
+        $.ajax({
+            url: '/BackEnd/ExtractInAppPurchases/',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                appendCheckboxesWithViewMore($('#In_app_Purchases-options-container'), data.InAppPurchases);
+                attachEventListeners();
+                EventListeners();
+            },
+            error: function () {
+                console.error('Failed to fetch In-App Purchase options.');
+            }
+        });
 
+        // Extract Rating
+        $.ajax({
+            url: '/BackEnd/ExtractRating/',
+            type: 'GET',
+            dataType: 'json',
+            success: function (data) {
+                appendRatingCheckboxes($('#Average_User_Rating-options-container'));
+                attachEventListeners();
+                EventListeners();
+            },
+            error: function () {
+                console.error('Failed to fetch rating options.');
+            }
+        });
 
-		$.ajax({
-			url: '/BackEnd/ExtractRating/',
-			type: 'GET',
-			dataType: 'json',
-			success: function (data) {
-				data.Rating.forEach(function (Ratings) {
-					$('#Average_User_Rating-options-container').append(`
-						<div class="form-check">
-							<input class="form-check-input" type="checkbox" value="${Ratings}" data-category="Average_User_Rating">
-							<label class="form-check-label">${Ratings}</label>
-						</div>
-					`);
-				});
-				attachEventListeners();
-				EventListeners();
-			},
-			error: function () {
-				console.error('Failed to fetch rating options.');
-			}
-		});
+        // Event listener for "View more" option
+        $('.filter-container').on('click', '.view-more', function () {
+            const container = $(this).closest('.category').find('.d-grid');
+            container.find('.form-check').show();
+            container.append('<div class="view-less" style="color: pink;">View less</div>'); // Add "View less" option
+            $(this).remove(); // Remove the "View more" option after displaying all checkboxes
+        });
+
+        // Event listener for "View less" option
+        $('.filter-container').on('click', '.view-less', function () {
+            const container = $(this).closest('.category').find('.d-grid');
+            container.find('.form-check').slice(10).hide(); // Hide checkboxes after the first 10
+            container.find('.view-more').show(); // Show the "View more" option
+            $(this).remove(); // Remove the "View less" option
+        });
+
+        // Event listener for rating checkboxes
+        $('.filter-container').on('change', '#Average_User_Rating-options-container input[type="checkbox"]', function () {
+            const container = $(this).closest('.category').find('.d-grid');
+            updateGamesByMultipleCategories(['Price', 'Genres', 'In_app_Purchases', 'Average_User_Rating', 'Languages', 'Rating']);
+        });
     });
-	
-	</script>
+</script>
+
+
+
+
+
 
 			  
 					  <details class="category">
@@ -869,7 +907,8 @@ var sortedGames;
                 order_direction: 'asc'
             },
              success: function(response) {
-            console.log(response);
+             console.log(response);
+
             makeAjaxRequest(1,1);
 
         },
