changes on  visited store games

--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -124,7 +124,7 @@
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Visited Store Games</a></li>
 
 										</ul>
 									</li>
@@ -212,8 +212,6 @@
 	</div>
 	<!-- end breadcrumb section -->
 	<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
-
 					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'game_info_page' game_id=game_id %}">Game Information</a></li>
 				 </ul>
@@ -404,7 +402,7 @@ console.log("Document is ready.");
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
