--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -385,10 +385,6 @@ margin-left:20%;
 			</div>
 		</div>
 	</div>
-		<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'Games' %}">All Games</a></li>
-				</ul>
 
 
 	<!-- games -->
@@ -842,7 +838,7 @@ margin-left:20%;
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
