--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -148,7 +148,7 @@ body img{
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
 											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Recently  Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}">Visited Store Games</a></li>
 											
 										</ul>
 									</li>
@@ -215,7 +215,7 @@ body img{
 	</div>
 	<!-- end breadcrumb section -->
 	<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'about' %}">About Us</a></li>
 				</ul>
 	<!-- featured section -->
@@ -339,7 +339,7 @@ body img{
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Recently Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
