--- a/FrontEnd/templates/contact.html
+++ b/FrontEnd/templates/contact.html
@@ -184,7 +184,7 @@ body img{
 	</div>
 	<!-- end breadcrumb section -->
 	<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'contact' %}">Contact Us</a></li>
 				</ul>
 	<!-- contact form -->
@@ -310,7 +310,7 @@ body img{
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
