--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -383,7 +383,7 @@ body img{
 									<ul class="sub-menu">
 										<li><a href="{% url 'Games' %}">All Games</a></li>
 										<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-										<li><a href="{% url 'History' %}">Downloaded Games</a></li>
+										<li><a href="{% url 'History' %}">Visited Store Games</a></li>
 
 									</ul>
 								</li>
@@ -454,7 +454,7 @@ body img{
 
 
 <ul class="Realbreadcrumb">
-						<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+						<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
 						<li class="breadcrumb-item current"><a href="{% url 'profile' %}">Profile</a></li>
 					  </ul>
 		<!--profile-->
@@ -564,7 +564,7 @@ $(document).ready(function() {
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
