--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -306,7 +306,7 @@ body img{
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}" style="text-decoration: none; font-size: 15px;">All Games</a></li>
 											<li><a href="{% url 'Fav' %}" style="text-decoration: none; font-size: 15px;">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}" style="text-decoration: none; font-size: 15px;">Downloaded Games</a></li>
+											<li><a href="{% url 'History' %}" style="text-decoration: none; font-size: 15px;">Visited Store Games</a></li>
 											
 										</ul>
 									</li>
@@ -499,7 +499,7 @@ body img{
 		</div>
 	</div>
 		<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
 					<li class="breadcrumb-item current"><a href="{% url 'Fav' %}">Favourite Games</a></li>
 				</ul>
 	<!-- end breadcrumb section -->
@@ -569,7 +569,7 @@ body img{
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
