--- a/FrontEnd/templates/History.html
+++ b/FrontEnd/templates/History.html
@@ -38,212 +38,246 @@
 
 	<style>
 
-.VisitedGamesContainer{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-    margin-top: 1%;
-    margin-left: 5%;
-    position: relative;
-   justify-content: flex-start;
-}
-		.games{
-			color: #fff;
+		.VisitedGamesContainer{
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			margin-top: 1%;
+			margin-left: 5%;
+			position: relative;
+		   justify-content: flex-start;
 		}
-		.innerList{
-			padding-left: 40px;
-            padding-bottom: 19px;
+		
+		
+		.empty-message {
+				text-align: center;
+				padding: 17%; 
+				margin-top: 20%; 
+				margin-right: 20%;
+				font-size: 120%; 
+				color: #ff069a; 
+				font-family: "Poppins", sans-serif;
+		
 		}
-		ul{
-           list-style: none;
+				.games{
+					color: #fff;
+				}
+				.innerList{
+					padding-left: 40px;
+					padding-bottom: 19px;
+				}
+				ul{
+				   list-style: none;
+				}
+				#footer{
+					justify-content: space-between;
+				}
+				summary::-webkit-details-marker {
+				  display: none;}
+		
+				  summary {
+				   list-style-type: none; /* For non-Chrome browsers */}
+		
+				button{
+					font-weight: bolder;
+				}
+				h6{
+				background-image: linear-gradient(to left, #07212e, #638494);
+				color: transparent;
+				background-clip: text;
+				-webkit-background-clip: text;
 		}
-		#footer{
-			justify-content: space-between;
+		
+		.single-product-item {
+		  position: relative;
+		  margin-right: 1%;
 		}
-		summary::-webkit-details-marker {
-          display: none;}
-
-		  summary {
-           list-style-type: none; /* For non-Chrome browsers */}
-
-		button{
-			font-weight: bolder;
+		.product-section{
+		 height:auto;
+		 overflow-y: auto; /* Enable vertical scrolling when content overflows */
+		  flex-grow: 1; /* Allow the container to grow and take up available space */
+		  min-height: calc(100vh - 100%);
 		}
-		h6{
-        background-image: linear-gradient(to left, #07212e, #638494);
-        color: transparent;
-        background-clip: text;
-        -webkit-background-clip: text;
-}
-
-.single-product-item {
-  position: relative;
-  margin-right: 1%;
-}
-.product-section{
- height:auto;
- overflow-y: auto; /* Enable vertical scrolling when content overflows */
-  flex-grow: 1; /* Allow the container to grow and take up available space */
-  min-height: calc(100vh - 100%);
-}
-
-.container {
-	height:100%;}
-
-.site-logo img{
-	width: 200px;
-    height: 100px;
-	position: relative;
-	left: -25px;
-}
-
-body img{
-  max-width: 600px;
-}
-.popup {
-  display: none;
-  position: fixed;
-  top: -20%;
- margin:10% 0%;
-  width: 100%;
-  height: 100%;
-  padding:10% 5%;
-  left: 0%;
-}
-
-.popup-content {
-  background-color: rgba(255, 255, 255, 0.7);
-  max-width: 600px;
-  margin: 10% auto 0 auto;
-  padding: 3%;
-  border: 1px solid #ccc;
-  border-radius: 50px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-  padding: 20px;
-  width: 40%;
-
-}
-
-
-	</style>
-</head>
-<body>
-	
-	<!--PreLoader-->
-    <div class="loader">
-        <div class="loader-inner">
-            <div class="circle"></div>
-        </div>
-    </div>
-    <!--PreLoader Ends-->
-	
-	<!-- header -->
-	<div class="top-header-area" id="sticker">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 col-sm-12 text-center">
-					<div class="main-menu-wrap">
-							<!-- logo -->
-							<div class="site-logo">
-								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-								</a>
-							</div>
-							<!-- logo -->
-	
-							<!-- menu start -->
-							<nav class="main-menu">
-								<ul>
-									
-									<li><a href=#>Games</a>
-										<ul class="sub-menu">
-											<li><a href="{% url 'Games' %}">All Games</a></li>
-											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-											<li><a href="{% url 'History' %}">Visited Store Games</a></li>
-											
-										</ul>
-									</li>
-									<li><a href="{% url 'profile' %}">Profile</a>
-									<li><a href="{% url 'contact' %}">Contact Us</a></li>
-									<li><a href="{% url 'about' %}">About Us</a></li>
-								<li>
-									<div class="header-icons">
-									
-										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
+		
+		.container {
+			height:100%;}
+		
+		.site-logo img{
+			width: 200px;
+			height: 100px;
+			position: relative;
+			left: -25px;
+		}
+		
+		body img{
+		  max-width: 600px;
+		}
+		.popup {
+		  display: none;
+		  position: fixed;
+		  top: -20%;
+		 margin:10% 0%;
+		  width: 100%;
+		  height: 100%;
+		  padding:10% 5%;
+		  left: 0%;
+		}
+		
+		.popup-content {
+		  background-color: rgba(255, 255, 255, 0.7);
+		  max-width: 600px;
+		  margin: 10% auto 0 auto;
+		  padding: 3%;
+		  border: 1px solid #ccc;
+		  border-radius: 50px;
+		  box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+		  padding: 20px;
+		  width: 40%;
+		
+		}
+		
+		
+			</style>
+		</head>
+		<body>
+			
+			<!--PreLoader-->
+			<div class="loader">
+				<div class="loader-inner">
+					<div class="circle"></div>
+				</div>
+			</div>
+			<!--PreLoader Ends-->
+			
+			<!-- header -->
+			<div class="top-header-area" id="sticker">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-12 col-sm-12 text-center">
+							<div class="main-menu-wrap">
+									<!-- logo -->
+									<div class="site-logo">
+										<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+										</a>
 									</div>
-								</li>
-							</ul>
-						</nav>
-						<div class="mobile-menu"></div>
-						<!-- menu end -->
-						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
-
-						<script>
-							$(document).ready(function() {
-								$.ajax({
-									url: '/BackEnd/Hello/',
-									type: 'GET',
-									success: function(data) {
-										if (data.error) {
-											console.error('Error:', data.error);
-										} else {
-											$('#welcome').text('Hello ' + data.Username + '! (' + data.Age_group + ')');
-										}
-									},
-									error: function(xhr, status, error) {
-										document.getElementById("errorPopUp").style.display = "block";
-										console.error('Error:', error);
-									}
-								});
-								$('#VisitedGamesContainer').removeAttr('style');
-								// Function to generate HTML for a single game
-								function generateGameHtml(game) {
-									return `
-									<div class="col-lg-4 col-md-6 text-center game-item" data-game-id="${game.id}">
-											<div class="single-product-item">
-												<div class="product-image">
-													<a href="${game.url}" class="urls"><img src="${game.icon_url}" alt="" class="imgs"></a>
-												</div>
-												<h3 class="names">${game.name}</h3>
-												<h6 >Viaited Date: ${game.visited_date}</h6>
-												<a href="#" class="cart-btn more-info-btn">More info</a>
-												
+									<!-- logo -->
+			
+									<!-- menu start -->
+									<nav class="main-menu">
+										<ul>
+											
+											<li><a href=#>Games</a>
+												<ul class="sub-menu">
+													<li><a href="{% url 'Games' %}">All Games</a></li>
+													<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
+													<li><a href="{% url 'History' %}">Visited Store Games</a></li>
+													
+												</ul>
+											</li>
+											<li><a href="{% url 'profile' %}">Profile</a>
+											<li><a href="{% url 'contact' %}">Contact Us</a></li>
+											<li><a href="{% url 'about' %}">About Us</a></li>
+										<li>
+											<div class="header-icons">
+											
+												<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
 											</div>
-										</div>`;
-										
-								}
-								$('#VisitedGamesContainer').on('click', '.more-info-btn', function(e) {
-									e.preventDefault();
-									selectedGameId = $(this).closest('.game-item').data('game-id');
-									window.location.href = `/game_info_page/${selectedGameId}/`;
-								});
-								
-								$.ajax({
-									url: '/BackEnd/visited_games/',
-									type: 'GET',
-									dataType: 'json',
-									success: function(data) {
-										if ('games' in data) {
-											var gamesHtml = '';
-											$.each(data.games, function(index, game) {
-												gamesHtml += generateGameHtml(game);
-											});
-											$('#VisitedGamesContainer').html(gamesHtml);
-										} else {
-											console.error('Error getting visited games:', data.error);
+										</li>
+									</ul>
+								</nav>
+								<div class="mobile-menu"></div>
+								<!-- menu end -->
+								<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
+		
+								<script>
+									$(document).ready(function() {
+										$.ajax({
+											url: '/BackEnd/Hello/',
+											type: 'GET',
+											success: function(data) {
+												if (data.error) {
+													console.error('Error:', data.error);
+												} else {
+													$('#welcome').text('Hello ' + data.Username + '! (' + data.Age_group + ')');
+												}
+											},
+											error: function(xhr, status, error) {
+												document.getElementById("errorPopUp").style.display = "block";
+												console.error('Error:', error);
+											}
+										});
+										//$('.VisitedGamesContainer').removeAttr('style');
+										// Function to generate HTML for a single game
+										function generateGameHtml(game) {
+											return `
+											<div class="col-lg-4 col-md-6 text-center game-item" data-game-id="${game.id}">
+													<div class="single-product-item">
+														<div class="product-image">
+															<a href="${game.url}" class="urls"><img src="${game.icon_url}" alt="" class="imgs"></a>
+														</div>
+														<h3 class="names">${game.name}</h3>
+														<h6 >Visited Date: ${game.visited_date}</h6>
+														<a href="#" class="cart-btn more-info-btn">More info</a>
+														
+													</div>
+												</div>`;
+												
 										}
+										$('.VisitedGamesContainer').on('click', '.more-info-btn', function(e) {
+											e.preventDefault();
+											selectedGameId = $(this).closest('.game-item').data('game-id');
+											window.location.href = `/game_info_page/${selectedGameId}/`;
+										});
+		
+										$.ajax({
+											url: '/BackEnd/visited_games/',
+											type: 'GET',
+											dataType: 'json',
+		
+										   success: function(data) {
+											  if ('games' in data) {
+											  var gamesHtml = '';
+											 $.each(data.games, function(index, game) {
+											 game.order = index + 1; // Assign original order
+		
+											 gamesHtml += generateGameHtml(game);
+											});
+		
+										 // Sort by visited date and original order
+										data.games.sort(function(a, b) {
+										   var dateComparison = new Date(b.visited_date) - new Date(a.visited_date);
+										   return dateComparison !== 0 ? dateComparison : b.order - a.order;
+										});
+		
+										// Create HTML for sorted games
+										 gamesHtml = '';
+										 $.each(data.games, function(index, game) {
+											gamesHtml += generateGameHtml(game);
+										   });
+		
+									   if (gamesHtml === '') {
+									   // No games visited, display a message
+									  $('.VisitedGamesContainer').html('<p class="empty-message"> No visited games to display. Start exploring and discover new games!</p>');
+									  } else {
+									  $('.VisitedGamesContainer').html(gamesHtml);
+									  }
+									  } else {
+									   console.error('Error getting visited games:', data.error);
+									 }
 									},
-									error: function(error) {
-										console.error('Error getting visited games:', error);
-									}
-								});
-							});
-							</script>					
+							   error: function(error) {
+									console.error('Error getting visited games:', error);
+									 }
+							   });
+													
+									});
+									</script>					
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-	<!-- end header -->
+			<!-- end header -->
 	<!-- breadcrumb-section -->
 	<div class="breadcrumb-section breadcrumb-bg">
 		<div class="container">
@@ -264,31 +298,31 @@ body img{
 	</div>
 	<!-- end breadcrumb section -->
 <ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'index' %}" >Home</a></li>
-					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Downloaded Games</a></li>
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+					<li class="breadcrumb-item current"><a href="{% url 'History' %}">Visited Store Games</a></li>
 				</ul>
 	<!-- games -->
 	<div class="product-section mt-150 mb-150">
 		<div class="container">
 
-			<div class="row">
+			<!--<div class="row">
                 <div class="col-md-12">
                   
                 </div>
-            </div>
+            </div>-->
 
-			<div class="row product-lists" id="VisitedGamesContainer">
+			<div class="VisitedGamesContainer">
 				<!-- Games will be dynamically added here -->
 			</div>
 			
 						
-			<div class="row">
+			<!--<div class="row">
 				<div class="col-lg-12 text-center">
 					<div class="pagination-wrap">
 						<ul>
 
 						</ul>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
@@ -335,7 +369,7 @@ body img{
 								<ul class="innerList">
 									<li class="dash"><a href="{% url 'Games' %}">All Games</a></li>
 									<li class="dash"><a href="{% url 'Fav' %}">Favourite Games</a></li>
-									<li class="dash"><a href="{% url 'History' %}">Downloaded Games</a></li>
+									<li class="dash"><a href="{% url 'History' %}">Visited Store Games</a></li>
 								</ul></details>
 								<li class="dash"><a href="{% url 'profile' %}">Profile</a></li>
 								<li class="dash"><a href="{% url 'contact' %}">Contact Us</a></li>
